# slow-mm

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  deploy-configs.yml
configs/mm/: slow-mm.yaml
deploy/: slow-mm.service
scripts/: backtest_comprehensive.py  backtest_lib.py  backtest_mr.py  backtest_mr_regime.py  backtest_mr_with_hedge.py  backtest_tf.py  slow-mm.sh  weekly_backtest.py
src/: config.rs  lib.rs  main.rs  market_maker.rs  rate_limit_notifier.rs  status_reporter.rs
src/trade/execution/: dex_connector_box.rs
