[package]
name = "slow-mm"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
chrono = "0.4.24"
env_logger = "0.10.0"
log = "0.4.17"
lazy_static = "1.4.0"
rust_decimal = { version = "1.0", features = ["serde"] }
rust_decimal_macros = "1.0"
lettre = "0.11.9"
ctor = "0.2.9"
once_cell = "1.19"

debot-utils = "1.0.*"

dex-connector = { path = "../dex-connector" }

[dev-dependencies]
tempfile = "3"

[features]
default = ["lighter-sdk"]
lighter-sdk = ["dex-connector/lighter-sdk"]

[[bin]]
name = "slow-mm"
path = "src/main.rs"
